# jarn.mkrelease

./: .gitignore  CHANGES.rst  CHANGES.txt  LICENSE  MANIFEST.in  README.rst  README.txt  WHATSNEW.txt  buildout.cfg  nose2.cfg  setup.cfg  setup.py  tox.ini
.github/workflows/: python-package.yml
docs/: BLOGPOST.rst  view
jarn/mkrelease/: __main__.py  chdir.py  colors.py  configparser.py  confparser.py  dirstack.py  exit.py  lazy.py  mkrelease.py  process.py  python.py  scm.py  scp.py  setup.py  setuptools.py  tee.py  testing.py  twine.py  urlparser.py  utils.py
jarn/mkrelease/tests/: README.txt  test_chdir.py  test_configparser.py  test_defaults.py  test_dirstack.py  test_getoptions.py  test_git.py  test_lazy.py  test_locations.py  test_mercurial.py  test_mkrelease.py  test_process.py  test_python.py  test_scmcontainer.py  test_scmfactory.py  test_scp.py  test_setup.py  test_setuptools.py  test_subversion.py  test_testing.py  test_urlparser.py
jarn/mkrelease/tests/testeggs/: setuptools_git-0.3.4-py2.6.egg  setuptools_git-0.3.4x-py2.6.egg  setuptools_hg-0.2-py2.6.egg  setuptools_hg-0.2x-py2.6.egg
jarn/mkrelease/tests/testpackage.git/: setup.py
jarn/mkrelease/tests/testpackage.hg/: README.txt
jarn/mkrelease/tests/testpackage.hg/.hg/: branchheads.cache  dirstate  undo.dirstate
jarn/mkrelease/tests/testpackage.hg/.hg/store/: 00changelog.i  00manifest.i  fncache  undo
jarn/mkrelease/tests/testpackage.hg/.hg/store/data/: _r_e_a_d_m_e.txt.i  setup.py.i
jarn/mkrelease/tests/testpackage.hg/.hg/store/data/testpackage/: ____init____.py.i  mercurial__only.py.i  mercurial__only.txt.i
jarn/mkrelease/tests/testrepo.svn/db/: current  uuid
jarn/mkrelease/tests/testrepo.svn/db/revprops/: 0  1  2  3  4  5
jarn/mkrelease/tests/testrepo.svn/db/revs/: 1  2  3  4  5
tests/: test_chdir.py  test_configparser.py  test_defaults.py  test_getoptions.py  test_git.py  test_locations.py  test_mercurial.py  test_mkrelease.py  test_process.py  test_python.py  test_scmfactory.py  test_setup.py  test_setuptools.py  test_subversion.py  test_testing.py  test_twine.py  test_urlparser.py  testing.py
