[metadata]
name = jarn.mkrelease
version = 5.3
description = Python package releaser
long_description = file: README.rst, CHANGES.rst
long_description_content_type = text/x-rst
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: MacOS :: MacOS X
    Operating System :: POSIX
    Programming Language :: Python
    Programming Language :: Python :: 3
keywords = create, release, upload, python, sdist, sdists, wheel, wheels, pypi, releaser, package, packages, publish
author = Stefan H. Holek
author_email = stefan@epy.co.at
url = https://github.com/Jarn/jarn.mkrelease
license = BSD-2-Clause

[options]
packages = find_namespace:
zip_safe = false
install_requires =
    setuptools
    lazy
    wheel
    blessed
python_requires = >=3.7

[options.packages.find]
exclude =
    tests

[options.entry_points]
console_scripts =
    mkrelease = jarn.mkrelease.mkrelease:main

[options.extras_require]
testing =
    nose2
    nose2-kflag
twine =
    twine
filefinder =
    setuptools-subversion >= 3.1
    setuptools-hg >= 0.4
    setuptools-git >= 1.2

[egg_info]
tag_build = dev0
