[metadata]
name = jarn.mkrelease
version = 6.0
description = Python package releaser
long_description = file: README.rst, CHANGES.rst
long_description_content_type = text/x-rst
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: MacOS :: MacOS X
    Operating System :: POSIX
    Programming Language :: Python
    Programming Language :: Python :: 3
keywords = create, release, upload, python, sdist, sdists, wheel, wheels, pypi, releaser, package, packages, publish
author = Stefan H. Holek
author_email = stefan@epy.co.at
url = https://github.com/Jarn/jarn.mkrelease
license = BSD-2-Clause

[options]
packages =
    jarn
    jarn.mkrelease
zip_safe = false
install_requires =
    setuptools >= 68.0.0; python_version < '3.8'
    setuptools >= 68.2.2; python_version >= '3.8'
    lazy >= 1.6
    wheel >= 0.41.2
    blessed >= 1.20.0
    importlib-metadata >= 6.7.0; python_version < '3.8'
python_requires = >=3.7

[options.entry_points]
console_scripts =
    mkrelease = jarn.mkrelease.mkrelease:main

[options.extras_require]
testing =
    nose2 >= 0.13.0
    nose2-kflag >= 1.0
twine =
    twine >= 4.0.2
filefinder =
    setuptools-subversion >= 3.1
    setuptools-hg >= 0.4
    setuptools-git >= 1.2

[egg_info]
tag_build = dev0
